# QHRR0-control

./: .gitignore  FALLBACK_POLICY.md  README.md  can_monitor.py  memo.md  run_mujoco_simulation.py
Dashboard/: README.md  config.yaml
Dashboard/backend/: __init__.py  app.py  bus_load.py  can_decode.py  command_api.py  socketcan_io.py  state.py
Dashboard/frontend/: app.js  index.html  style.css
HAL/: app_config.py  can_daemon.py  config.yaml  task_controller.py
HAL/can_bus/: __init__.py
HAL/test/: imu_test.py  motor_test.py
QHRR0_control/SPG_actuator/: dongilC_motor_protocol.py
QHRR0_control/e2box_imu/: e2box_imu_protocol.md  e2box_imu_protocol.py  robot_state.py
app_config/: dashboard.yaml  mujoco.yaml  platform.yaml  processes.yaml  robot_controller.yaml
config/app_config/: dashboard.yaml  mujoco.yaml  platform.yaml  processes.yaml  robot_controller.yaml
dashboard/: README.md
docs/: ARCHITECTURE.md  CAN_INTERFACE.md  CHANGELOG.md  CONFIG_SCHEMA.md  CONTROL_LOOP.md  HANDOFF.md  IPC_SHM.md  LOGGING.md  RUNBOOK.md  SAFETY.md  TEST_PLAN.md
hal/: __init__.py  daemon_launcher.py  imu_protocol.py  ipc_data.py
hal/can_bus/: __init__.py  bus.py  can_types.py  daemon.py  dispatcher.py  frame.py  process_client.py  process_transport.py
legacy/: can_daemon.py  daemon_launcher.py  dongilC_motor_protocol.py  ipc_data.py  motor_protocol.py  motor_test.py  task_controller.py
legacy/mujoco-QHRR/: CMakeLists.txt
mujoco-QHRR/: CMakeLists.txt
mujoco-QHRR/app/daemon/: daemon.cpp
mujoco-QHRR/app/shm_logger/: main.cpp
mujoco-QHRR/app/task_controller/: rnn_onnx_runner.cpp  task_controller.cpp
mujoco-QHRR/config/app_config/: daemon_config.yaml
mujoco-QHRR/config/policy_config/qhrr1/: policy_list.yaml
mujoco-QHRR/config/policy_config/qhrr1/qhrr1/: runner_config.yaml
mujoco-QHRR/config/policy_config/rbq/: policy_list.yaml
mujoco-QHRR/include/: joystick.hpp  shared_memory.hpp  shm_utils.hpp
mujoco-QHRR/policy/qhrr/lowerpose/: policy.onnx
mujoco-QHRR/policy/qhrr1/qhrr1/: policy.onnx
mujoco-QHRR/policy/rbq/rbq/250513_good_4mode/: set
qhrr0_hw/: __init__.py  calibration.py  joint_map.py  robot_spec.py
qhrr0_hw/actuators/: __init__.py  actuator_specs.py  dongilc_protocol.py  spg_actuator.py
qhrr0_hw/imu/: __init__.py  e2box_protocol.py  imu_specs.py
robot_controller/: __init__.py  config.py  control_loop.py  controller.py  main.py  process_supervisor.py  robot_controller.py  runtime_io.py  shm_command_router.py  shm_manager.py  state.py  state_machine.py
robot_controller/command/: __init__.py  command_validator.py  (+2 more)
tests/: test_can_daemon_gate.py  test_command_validator.py  test_config_safety_gate.py  test_control_command_shm.py  test_control_loop.py  test_dashboard_command_api.py  test_mujoco_config.py  test_operator_command_shm.py  test_robot_state_shm.py  test_safety_controller.py  test_shm_policy_command_source.py  test_spg_actuator_protocol.py  test_spg_firmware_v14.py  test_state_machine.py  test_task_controller_shm_io.py
tools/: can_monitor.py
(+142 files in other folders)
